--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Software Engineer
-url: "https://ankitsultana.com"
-baseurl: "/Software Engineer"
+title: Ivan Wong
+url: ""
+baseurl: ""
 
 markdown: kramdown
 
